--- a/IA.WebApp/angular.json
+++ b/IA.WebApp/angular.json
@@ -33,7 +33,10 @@
               "node_modules/@swimlane/ngx-datatable/release/themes/bootstrap.css",
               "node_modules/@swimlane/ngx-datatable/release/assets/icons.css",
               "src/assets/scss/now-ui-dashboard.scss",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js",
