--- a/IA.WebApp/package.json
+++ b/IA.WebApp/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "7.2.0",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "7.2.0",
     "@angular/compiler": "7.2.0",
     "@angular/core": "7.2.0",
@@ -37,6 +38,7 @@
     "date-fns": "1.30.1",
     "devextreme": "18.2.4",
     "devextreme-angular": "18.2.4",
+    "enum-values": "^1.2.1",
     "fullcalendar": "4.0.0-alpha.4",
     "fullcalendar-scheduler": "4.0.0-alpha.4",
     "jw-bootstrap-switch-ng2": "2.0.2",
@@ -50,6 +52,8 @@
     "nouislider": "12.1.0",
     "perfect-scrollbar": "1.4.0",
     "popper.js": "1.14.6",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.0.4",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
     "stream": "0.0.2",
