--- a/IA.WebApp/package.json
+++ b/IA.WebApp/package.json
@@ -30,6 +30,7 @@
     "@types/googlemaps": "3.30.16",
     "angular-archwizard": "3.0.0",
     "angular2-multiselect-dropdown": "4.2.1",
+    "axios": "^0.21.1",
     "bootstrap": "4.2.1",
     "chart.js": "2.7.3",
     "chartist": "0.11.0",
